--- a/Guestbook Downgrade/Assembly-CSharp.csproj
+++ b/Guestbook Downgrade/Assembly-CSharp.csproj
@@ -195,10 +195,13 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\AzureKinectExamples\Resources\UserHistImageShader.shader" />
+    <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
     <None Include="Assets\AzureKinectExamples\SDK\Kinect4AzureSDK\Plugins\Microsoft.Azure.Kinect.Sensor.dll" />
+    <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
     <None Include="Assets\AzureKinectExamples\SDK\RealSenseSDK2.0\RealSenseSDK_License.txt" />
     <None Include="Assets\StreamingAssets\4_28_2022.txt" />
     <None Include="Assets\AzureKinectExamples\Resources\BackgroundRenderShader.shader" />
+    <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap.shader" />
     <None Include="Assets\AzureKinectExamples\Resources\ColorInfraredShaderK2.compute" />
     <None Include="Assets\AzureKinectExamples\Resources\DepthIrFilterShader.shader" />
     <None Include="Assets\AzureKinectExamples\SDK\Kinect4AzureSDK\Plugins\k4abt.dll" />
@@ -209,8 +212,10 @@
     <None Include="Assets\AzureKinectExamples\Resources\UserMeshShader.shader" />
     <None Include="Assets\AzureKinectExamples\Resources\ColorBodyIndexShaderK2.compute" />
     <None Include="Assets\AzureKinectExamples\SDK\Kinect4AzureSDK\Plugins\System.Runtime.CompilerServices.Unsafe.dll" />
+    <None Include="Assets\TextMesh Pro\Shaders\TMPro_Mobile.cginc" />
     <None Include="Assets\AzureKinectExamples\KinectDemos\PointCloudDemo\VFX\DownloadMoreVFX.txt" />
     <None Include="Assets\AzureKinectExamples\_Readme\致盗版使用者-ToPiracyUsers.txt" />
+    <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF SSD.shader" />
     <None Include="Assets\AzureKinectExamples\SDK\Kinect4AzureSDK\Plugins\onnxruntime.dll" />
     <None Include="Assets\Cell demo\NormalExtrusion.shader" />
     <None Include="Assets\AzureKinectExamples\SDK\Kinect4AzureSDK\AzureKinectSDK_License.txt" />
@@ -219,6 +224,7 @@
     <None Include="Assets\AzureKinectExamples\Resources\FloorDetectionOffsetHistShader.compute" />
     <None Include="Assets\Cell demo\SoildColor.shader" />
     <None Include="Assets\AzureKinectExamples\SDK\Kinect4AzureSDK\Plugins\onnxruntime_providers_tensorrt.dll" />
+    <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Surface-Mobile.shader" />
     <None Include="Assets\AzureKinectExamples\Resources\FloorDetectionOffsetMinMaxShader.compute" />
     <None Include="Assets\AzureKinectExamples\Resources\InfraredImageShader.shader" />
     <None Include="Assets\AzureKinectExamples\KinectScripts\LZ4Sharp\LZ4Sharp.dll" />
@@ -231,36 +237,51 @@
     <None Include="Assets\AzureKinectExamples\SDK\KinectSDK2.0\Plugins\x86\KinectUnityAddin.dll" />
     <None Include="Assets\AzureKinectExamples\Resources\SceneMeshGShader.cginc" />
     <None Include="Assets\AzureKinectExamples\SDK\RealSenseSDK2.0\Plugins\realsense2.dll" />
+    <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Surface.shader" />
     <None Include="Assets\AzureKinectExamples\Resources\ForegroundFiltBodyShader.compute" />
     <None Include="Assets\AzureKinectExamples\Resources\ForegroundBlendShader.shader" />
     <None Include="Assets\AzureKinectExamples\Resources\SceneMeshShader.shader" />
+    <None Include="Assets\TextMesh Pro\Sprites\EmojiOne Attribution.txt" />
+    <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap-Custom-Atlas.shader" />
     <None Include="Assets\AzureKinectExamples\Resources\PointCloudVertexShaderCRK2.compute" />
+    <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF.shader" />
+    <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile SSD.shader" />
     <None Include="Assets\AzureKinectExamples\Resources\DepthHistImageShader.shader" />
+    <None Include="Assets\TextMesh Pro\Resources\LineBreaking Leading Characters.txt" />
     <None Include="Assets\AzureKinectExamples\Resources\PointCloudBodyVertexShaderCRK2.compute" />
+    <None Include="Assets\TextMesh Pro\Shaders\TMPro_Properties.cginc" />
     <None Include="Assets\AzureKinectExamples\Resources\UserBlendShader.shader" />
     <None Include="Assets\AzureKinectExamples\SDK\Kinect4AzureSDK\Plugins\k4arecord.dll" />
+    <None Include="Assets\TextMesh Pro\Shaders\TMPro_Surface.cginc" />
     <None Include="Assets\AzureKinectExamples\Resources\SceneMeshVShader.shader" />
     <None Include="Assets\AzureKinectExamples\Resources\FloorDetectionOffsetEstShader.compute" />
     <None Include="Assets\AzureKinectExamples\Resources\PointCloudColorShaderK2.compute" />
     <None Include="Assets\AzureKinectExamples\Resources\ForegroundShader.shader" />
     <None Include="Assets\AzureKinectExamples\KinectScripts\KinectUserBodyMerger-Attribution.txt" />
+    <None Include="Assets\TextMesh Pro\Resources\LineBreaking Following Characters.txt" />
     <None Include="Assets\AzureKinectExamples\SDK\Kinect4AzureSDK\Plugins\onnxruntime_providers_shared.dll" />
     <None Include="Assets\AzureKinectExamples\Resources\SceneMeshVShader.cginc" />
     <None Include="Assets\AzureKinectExamples\SDK\Kinect4AzureSDK\Plugins\directml.dll" />
     <None Include="Assets\AzureKinectExamples\Resources\UserBodyImageShader.shader" />
     <None Include="Assets\AzureKinectExamples\Resources\ColorDepthShaderK2.compute" />
     <None Include="Assets\AzureKinectExamples\Resources\SceneMeshUShader.shader" />
+    <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Masking.shader" />
     <None Include="Assets\AzureKinectExamples\Resources\UserMeshVShader.shader" />
     <None Include="Assets\AzureKinectExamples\Resources\PointCloudBodyVertexShaderAll.compute" />
     <None Include="Assets\AzureKinectExamples\Resources\ForegroundFiltDistShader.compute" />
     <None Include="Assets\AzureKinectExamples\Resources\FragmentLighting.cginc" />
+    <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF Overlay.shader" />
     <None Include="Assets\AzureKinectExamples\Resources\DefSensorInterface.json.txt" />
+    <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap-Mobile.shader" />
     <None Include="Assets\AzureKinectExamples\Resources\PointCloudVertexShaderAll.compute" />
+    <None Include="Assets\TextMesh Pro\Fonts\LiberationSans - OFL.txt" />
     <None Include="Assets\AzureKinectExamples\Resources\UserMeshUShader.shader" />
     <None Include="Assets\AzureKinectExamples\SDK\KinectSDK2.0\Plugins\Kinect2UnityWrapper.dll" />
     <None Include="Assets\AzureKinectExamples\Resources\DepthTexShader.shader" />
+    <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile.shader" />
     <None Include="Assets\AzureKinectExamples\Resources\ErodeShader.shader" />
     <None Include="Assets\AzureKinectExamples\Resources\GradientShader.shader" />
+    <None Include="Assets\TextMesh Pro\Shaders\TMP_Sprite.shader" />
     <None Include="Assets\AzureKinectExamples\Resources\MedianShader.shader" />
   </ItemGroup>
   <ItemGroup>
@@ -827,6 +848,12 @@
     </Reference>
     <Reference Include="UnityEditor.UI">
       <HintPath>Library\ScriptAssemblies\UnityEditor.UI.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.TextMeshPro.Editor">
+      <HintPath>Library\ScriptAssemblies\Unity.TextMeshPro.Editor.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.TextMeshPro">
+      <HintPath>Library\ScriptAssemblies\Unity.TextMeshPro.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
