ui korean added backup

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ Temp/
 Logs/
 *.csproj
 Guestbook Downgrade/Assembly-CSharp.csproj
+Guestbook Downgrade/Assets/StreamingAssets/data_dump.txt
+Guestbook Downgrade/Assets/StreamingAssets/data_dump.txt.meta
