--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ Logs/
 Guestbook Downgrade/Assembly-CSharp.csproj
 Guestbook Downgrade/Assets/StreamingAssets/data_dump.txt
 Guestbook Downgrade/Assets/StreamingAssets/data_dump.txt.meta
+Guestbook Downgrade/Assets/StreamingAssets/data_dump.txt
+Guestbook Downgrade/Assets/StreamingAssets/data_dump.txt.meta
