--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ Guestbook Downgrade/Assets/StreamingAssets/data_dump.txt
 Guestbook Downgrade/Assets/StreamingAssets/data_dump.txt.meta
 Guestbook Downgrade/Assets/StreamingAssets/data_dump.txt
 Guestbook Downgrade/Assets/StreamingAssets/data_dump.txt.meta
+Guestbook Downgrade/Assets/StreamingAssets/data_dump.txt
+Guestbook Downgrade/Assets/StreamingAssets/data_dump.txt.meta
