--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ Guestbook Downgrade/Assets/StreamingAssets/data_dump.txt
 Guestbook Downgrade/Assets/StreamingAssets/data_dump.txt.meta
 Guestbook Downgrade/Assets/StreamingAssets/data_dump.txt
 Guestbook Downgrade/Assets/StreamingAssets/data_dump.txt.meta
+Guestbook Downgrade/Assets/StreamingAssets/history.txt
+Guestbook Downgrade/Assets/StreamingAssets/history.txt.meta
