--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ Guestbook Downgrade/Assets/StreamingAssets/data_dump.txt
 Guestbook Downgrade/Assets/StreamingAssets/data_dump.txt.meta
 Guestbook Downgrade/Assets/StreamingAssets/history.txt
 Guestbook Downgrade/Assets/StreamingAssets/history.txt.meta
+*.txt
+Guestbook Downgrade/Build/Guestbook Downgrade_Data/StreamingAssets/history.txt
