--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ Guestbook Downgrade/Assets/StreamingAssets/history.txt.meta
 Guestbook Downgrade/Build/Guestbook Downgrade_Data/StreamingAssets/history.txt
 Guestbook Downgrade/Build/Guestbook Downgrade_Data/StreamingAssets/data_dump.txt
 *.txt
+Guestbook Downgrade/Build/Guestbook Downgrade_Data/StreamingAssets/data_dump.txt
