--- a/.gitignore
+++ b/.gitignore
@@ -3,17 +3,5 @@ Temp/
 .vs/
 Logs/
 *.csproj
-Guestbook Downgrade/Assembly-CSharp.csproj
-Guestbook Downgrade/Assets/StreamingAssets/data_dump.txt
-Guestbook Downgrade/Assets/StreamingAssets/data_dump.txt.meta
-Guestbook Downgrade/Assets/StreamingAssets/data_dump.txt
-Guestbook Downgrade/Assets/StreamingAssets/data_dump.txt.meta
-Guestbook Downgrade/Assets/StreamingAssets/data_dump.txt
-Guestbook Downgrade/Assets/StreamingAssets/data_dump.txt.meta
-Guestbook Downgrade/Assets/StreamingAssets/history.txt
-Guestbook Downgrade/Assets/StreamingAssets/history.txt.meta
 *.txt
-Guestbook Downgrade/Build/Guestbook Downgrade_Data/StreamingAssets/history.txt
-Guestbook Downgrade/Build/Guestbook Downgrade_Data/StreamingAssets/data_dump.txt
-*.txt
-Guestbook Downgrade/Build/Guestbook Downgrade_Data/StreamingAssets/data_dump.txt
+obj/
